--- a/src/styles/component.scss
+++ b/src/styles/component.scss
@@ -37,7 +37,7 @@
 
     .component__double-col-section__text-group {
       width: 350px;
-      max-width: 90%;
+      max-width: 90vw;
       margin: 0px auto;
       text-align: left;
 
@@ -47,6 +47,8 @@
 
       .component__double-col-section__text-group__desc {
         width: inherit;
+        max-width: inherit;
+
       }
     }
   }
